--- a/EC_Websites/index.html
+++ b/EC_Websites/index.html
@@ -156,11 +156,11 @@
       <div class="peg"></div>
     </div>
   </div>
-  <!-- <script src="./static/scripts/jquery.min.js"></script> -->
-  <!-- <script src="./static/scripts/bootstrap.min.js"></script> -->
-  <!-- <script src="./static/scripts/events.js"></script> -->
-  <!-- <script src="./static/scripts/plugins.js"></script> -->
-  <!-- <script src="./static/scripts/typed.min.js"></script> -->
+  <script src="./static/scripts/jquery.min.js"></script>
+  <script src="./static/scripts/bootstrap.min.js"></script>
+  <script src="./static/scripts/events.js"></script>
+  <script src="./static/scripts/plugins.js"></script>
+  <script src="./static/scripts/typed.min.js"></script>
   <script>
       (function (window, document) {
         var typing = Fluid.plugins.typing;
@@ -193,7 +193,7 @@
         }
       </style>
   <!-- <script src="./static/scripts/local-search.js"></script> -->
-  <!-- <script defer="defer" src="./static/scripts/busuanzi.pure.mini.js"></script> -->
-  <!-- <script src="./static/scripts/boot.js"></script> -->
+  <script defer="defer" src="./static/scripts/busuanzi.pure.mini.js"></script>
+  <script src="./static/scripts/boot.js"></script>
   </body>
 </html>
